Added tests for NullEmployee and setters for employee first and last names