@@ -29,6 +29,7 @@ public class TestRequestEntity {
     private Node n1,n2,n3,n4;
     private Edge e1,e2,e3;
     private InterpreterRequest presetIR;
+    private int empID1, empID2;
 
     @Before
     public void setup() throws DatabaseException {
@@ -50,11 +51,11 @@ public class TestRequestEntity {
 
         Employee testEmp1 = new Employee("boss@hospital.com","Wong","Wilson",
                 "123", KioskPermission.ADMIN, RequestType.GENERAL);
-        db.addEmployee(testEmp1,"123");
+        empID1=db.addEmployee(testEmp1,"123");
         Employee testEmp2 = new Employee("bobby@hospital.com","Bobby","Hill",
                 "123", KioskPermission.EMPLOYEE, RequestType.INTERPRETER);
-        db.addEmployee(testEmp2,"123");
-        String pIR = r.submitInterpreterRequest("NODE3",1,"Is Chinese or Japanese",Language.CHINESE);
+        empID2=db.addEmployee(testEmp2,"123");
+        String pIR = r.submitInterpreterRequest("NODE3", empID1,"Is Chinese or Japanese",Language.CHINESE);
         presetIR = r.getInterpreterRequest(pIR);
     }
 
@@ -76,7 +77,7 @@ public class TestRequestEntity {
     public void testGetNonexistentInterpreterRequest(){
         long currTime = System.currentTimeMillis();
         InterpreterRequest iR1 = new InterpreterRequest("Int 2017:11:22 NODE1","NODE1",
-                1, 1, "", new Timestamp(currTime), new Timestamp(currTime-1),
+                empID1, empID1, "", new Timestamp(currTime), new Timestamp(currTime-1),
                 new Timestamp(currTime-1), RequestProgressStatus.TO_DO, Language.ARABIC);
         try{
             r.getInterpreterRequest(iR1.getRequestID());
@@ -89,7 +90,7 @@ public class TestRequestEntity {
     @Test
     public void testGetDeletedInterpreterRequest(){
         //adds interpreter request to database and hashmap
-        String testIRID = r.submitInterpreterRequest("NODE1",1, " ", Language.ARABIC);
+        String testIRID = r.submitInterpreterRequest("NODE1", empID1, " ", Language.ARABIC);
         //retrieves interpreter request from the hashmap
         InterpreterRequest iR = r.getInterpreterRequest(testIRID);
         //removes the request from the database
@@ -106,11 +107,11 @@ public class TestRequestEntity {
     @Test
     public void testGetInterpreterRequest(){
         //adds interpreter request to database and hashmap
-        String testIRID = r.submitInterpreterRequest("NODE1",1, " ", Language.ARABIC);
+        String testIRID = r.submitInterpreterRequest("NODE1", empID1, " ", Language.ARABIC);
         //retrieves interpreter request from the hashmap
         InterpreterRequest iR = r.getInterpreterRequest(testIRID);
         assertEquals("NODE1",iR.getNodeID());
-        assertEquals(1,iR.getAssignerID());
+        assertEquals(empID1,iR.getAssignerID());
         assertEquals(" ",iR.getNote());
         assertEquals(Language.ARABIC,iR.getLanguage());
         r.deleteRequest(testIRID);
@@ -119,9 +120,9 @@ public class TestRequestEntity {
     @Test
     public void testCompleteRequest(){
         //adds interpreter request to database and hashmap
-        String iR1ID = r.submitInterpreterRequest("NODE1",1, " ", Language.ARABIC);
+        String iR1ID = r.submitInterpreterRequest("NODE1", empID1, " ", Language.ARABIC);
         //starts the request
-        r.markInProgress(2,iR1ID);
+        r.markInProgress(empID2,iR1ID);
         //completes request
         r.completeRequest(iR1ID);
         //retrieves completed request
@@ -133,11 +134,11 @@ public class TestRequestEntity {
     @Test
     public void testUpdateRequest(){
         //adds interpreter request to database and hashmap
-        String testIRID = r.submitInterpreterRequest("NODE1",1, " ", Language.ARABIC);
+        String testIRID = r.submitInterpreterRequest("NODE1", empID1, " ", Language.ARABIC);
         //Interpreter request to be modified
         long currTime = System.currentTimeMillis();
         InterpreterRequest iR1 = new InterpreterRequest("Int 2017:11:22 NODE1","NODE1",
-                1, 1, "", new Timestamp(currTime), new Timestamp(currTime-1),
+                empID1, empID1, "", new Timestamp(currTime), new Timestamp(currTime-1),
                 new Timestamp(currTime-1), RequestProgressStatus.TO_DO, Language.ARABIC);
         //modifying interpreter request
         r.updateInterpreterRequest(testIRID, iR1.getNodeID(), iR1.getAssignerID(), iR1.getNote(), iR1.getSubmittedTime(),
@@ -154,28 +155,18 @@ public class TestRequestEntity {
         r.deleteRequest(testIRID);
     }
 
-//    @Test
-//    public void testinterpreterChecker(){
-//        assertEquals("Security",r.checkRequestType(presetsR.getRequestID()));
-//        assertEquals("Interpreter",r.checkRequestType(presetIR.getRequestID()));
-//    }
-
     @Test
     public void getLanguageFrequencyTest(){
-        String iR1 = r.submitInterpreterRequest("NODE2",1,"",Language.GERMAN);
-        String iR2 = r.submitInterpreterRequest("NODE1",1,"",Language.CHINESE);
-        String iR3 = r.submitInterpreterRequest("NODE1",1,"",Language.GERMAN);
+        String iR3 = r.submitInterpreterRequest("NODE1", empID2,"",Language.CHINESE);
+        String iR1 = r.submitInterpreterRequest("NODE2", empID1,"",Language.GERMAN);
+        String iR2 = r.submitInterpreterRequest("NODE1", empID1,"",Language.CHINESE);
         LinkedList<LanguageFrequency> expected = new LinkedList<>();
         expected.add(new LanguageFrequency(Language.CHINESE,2));
         expected.add(new LanguageFrequency(Language.GERMAN,1));
         Collections.sort(expected, new SortByFrequency());
-        LinkedList<LanguageFrequency> actual =r.getLanguageFrequency();
-        for (LanguageFrequency languageFrequency : actual) {
-            System.out.println(languageFrequency.getLanguage());
-            System.out.println(languageFrequency.getFrequency());
-        }
-        assertEquals(expected.get(0).getFrequency(),actual.get(0).getFrequency());
-        assertEquals(expected.get(1).getFrequency(),actual.get(1).getFrequency());
+        LinkedList<LanguageFrequency> actual=r.getLanguageFrequency();
+        assertEquals(expected.getFirst().getFrequency(),actual.getFirst().getFrequency());
+        assertEquals(expected.getLast().getFrequency(),actual.getLast().getFrequency());
         r.deleteRequest(iR1);
         r.deleteRequest(iR2);
         r.deleteRequest(iR3);
